# ros2_sam2

./: CMakeLists.txt  README.md  package.xml
config/: mask_viewer.yaml  sam2_node.yaml
launch/: sam2.launch.py
scripts/: mask_viewer.py  sam2_node.py  yoloe_node.py
